[gd_scene load_steps=5 format=3 uid="uid://h6roi8gwnnli"]

[ext_resource type="Script" path="res://scenes/room/room_stages/room_stage.gd" id="1_frkdo"]
[ext_resource type="PackedScene" uid="uid://bnyfbqonp1qby" path="res://scenes/ui/background/background_scrolling_controller.tscn" id="2_na0t0"]
[ext_resource type="Script" path="res://scenes/room/room_stages/ready_set_go.gd" id="3_vacx5"]
[ext_resource type="PackedScene" uid="uid://53csj8ot6kcu" path="res://scenes/room/room_stages/ftg_scheduler.tscn" id="4_e1rqc"]

[node name="RoomStage" type="Control" node_paths=PackedStringArray("ready_set_go")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_frkdo")
stage_name = "PENTAGO"
ready_set_go = NodePath("ReadySetGo")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
metadata/_edit_lock_ = true

[node name="BackgroundScrollingController" parent="." instance=ExtResource("2_na0t0")]

[node name="ReadySetGo" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_vacx5")
metadata/_edit_lock_ = true

[node name="ReadySet" type="Label" parent="ReadySetGo"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -144.0
offset_right = 128.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -16
text = "READY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Go" type="Label" parent="ReadySetGo"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -43.0
offset_right = 0.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 256
text = "GO!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FTGScheduler" parent="." instance=ExtResource("4_e1rqc")]
layout_mode = 1

[connection signal="request_set_all_label_text" from="." to="BackgroundScrollingController" method="set_all_label_text"]
